# W2DR-1.0

./: CMakeLists.txt  CMakePresets.json  README.md
ExternalDependencies/GLAD/: CMakeLists.txt
ExternalDependencies/GLAD/include/glad/: gl.h
include/: Window.hpp  stb_image.h  w2dr.hpp
src/: Window.cpp  main.cpp  w2dr.cpp
